--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,16 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>com.github.deng0515001</groupId>
+      <artifactId>lnglat2Geo</artifactId>
+      <version>1.0.5</version>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.51</version>
+    </dependency>
   </dependencies>
 
   <build>
